force-app/main/default/objects/Policy_Schedule__c/Policy_Schedule__c.object-meta.xml
<CustomObject>
    <label>Policy Schedule</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>