force-app/main/default/objects/Policy_Schedule__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>