force-app/main/default/objects/Policy_Schedule__c/fields/Base_Creation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Base_Creation_Start_Date__c</fullName>
    <label>Base Creation Start Date</label>
    <type>Date</type>
</CustomField>