force-app/main/default/objects/Policy_Schedule__c/fields/Bordereaux_Override__c.field-meta.xml
<CustomField>
    <fullName>Bordereaux_Override__c</fullName>
    <label>Bordereaux Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>