force-app/main/default/objects/Policy_Schedule__c/fields/Endorsement_GWP__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_GWP__c</fullName>
    <label>Endorsement Premium (Annual)</label>
    <summarizedField>VG_Policy_Schedule_Endorsement__c.VG_Premium__c</summarizedField>
    <summaryForeignKey>VG_Policy_Schedule_Endorsement__c.VG_Policy_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>