force-app/main/default/objects/Policy_Schedule__c/fields/Endorsement_Premium_Pro__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Premium_Pro__c</fullName>
    <label>Endorsement Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>