force-app/main/default/objects/Policy_Schedule__c/fields/Gross_or_Net_Premium__c.field-meta.xml
<CustomField>
    <fullName>Gross_or_Net_Premium__c</fullName>
    <label>Gross or Net Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross</fullName>
            </value>
            <value>
                <fullName>Net</fullName>
                <default>true</default>
                <label>Net</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>