force-app/main/default/objects/Policy_Schedule__c/fields/Gross_Written_Premium__c.field-meta.xml
<CustomField>
    <fullName>Gross_Written_Premium__c</fullName>
    <label>Gross Written Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>