force-app/main/default/objects/Policy_Schedule__c/fields/ILF_Factor__c.field-meta.xml
<CustomField>
    <fullName>ILF_Factor__c</fullName>
    <label>ILF Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>