force-app/main/default/objects/Policy_Schedule__c/fields/ILF_Layer__c.field-meta.xml
<CustomField>
    <fullName>ILF_Layer__c</fullName>
    <label>ILF Layer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>