force-app/main/default/objects/Policy_Schedule__c/fields/ILF_Premium__c.field-meta.xml
<CustomField>
    <fullName>ILF_Premium__c</fullName>
    <label>ILF Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>