force-app/main/default/objects/Policy_Schedule__c/fields/Insured_Id__c.field-meta.xml
<CustomField>
    <fullName>Insured_Id__c</fullName>
    <formula>Policy__r.Insured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Id</label>
    <type>Text</type>
</CustomField>