force-app/main/default/objects/Policy_Schedule__c/fields/IPT__c.field-meta.xml
<CustomField>
    <fullName>IPT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>