force-app/main/default/objects/Policy_Schedule__c/fields/IPT_Percent__c.field-meta.xml
<CustomField>
    <fullName>IPT_Percent__c</fullName>
    <label>IPT (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>