force-app/main/default/objects/Policy_Schedule__c/fields/Levies__c.field-meta.xml
<CustomField>
    <fullName>Levies__c</fullName>
    <label>Levies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>