force-app/main/default/objects/Policy_Schedule__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit of indemnity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>