force-app/main/default/objects/Policy_Schedule__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <label>MID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MID 2</fullName>
                <default>true</default>
                <label>MID 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>