force-app/main/default/objects/Policy_Schedule__c/fields/MID_Check_Box__c.field-meta.xml
<CustomField>
    <fullName>MID_Check_Box__c</fullName>
    <label>MID Check Box</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MID 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>