force-app/main/default/objects/Policy_Schedule__c/fields/MTA_Parent_Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>MTA_Parent_Policy_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MTA Parent Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Policy Schedules</relationshipLabel>
    <relationshipName>Policy_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>