force-app/main/default/objects/Policy_Schedule__c/fields/MTA_Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>MTA_Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product unsuitable / misunderstood</fullName>
            </value>
            <value>
                <fullName>Product too expensive</fullName>
            </value>
            <value>
                <fullName>Alternative product purchased</fullName>
            </value>
            <value>
                <fullName>Cover overlapped with pre-existing cover</fullName>
            </value>
            <value>
                <fullName>Product cancelled within cooling off period</fullName>
            </value>
            <value>
                <fullName>Product cancelled by underwriter</fullName>
            </value>
            <value>
                <fullName>Poor service/complaint</fullName>
            </value>
            <value>
                <fullName>Cover no longer required</fullName>
            </value>
            <value>
                <fullName>Other (administrative reason)</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>