force-app/main/default/objects/Policy_Schedule__c/fields/ORC__c.field-meta.xml
<CustomField>
    <fullName>ORC__c</fullName>
    <label>ORC (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>