force-app/main/default/objects/Policy_Schedule__c/fields/ORC_Amount__c.field-meta.xml
<CustomField>
    <fullName>ORC_Amount__c</fullName>
    <label>ORC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>