force-app/main/default/objects/Policy_Schedule__c/fields/Premium_Adjustment_2__c.field-meta.xml
<CustomField>
    <fullName>Premium_Adjustment_2__c</fullName>
    <label>Commercial Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>