force-app/main/default/objects/Policy_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>GLPL</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>FIPI</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Property Per Event</fullName>
            </value>
            <value>
                <fullName>Property Per Risk</fullName>
            </value>
            <value>
                <fullName>AGG XL</fullName>
            </value>
            <value>
                <fullName>AGG Stop Loss</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Schemes</fullName>
            </value>
            <value>
                <fullName>Commercial Combined</fullName>
            </value>
            <value>
                <fullName>Public Sector – Non Conventional</fullName>
            </value>
            <value>
                <fullName>Commercial – Non Conventional</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>FI - PI</fullName>
            </value>
            <value>
                <fullName>FI - Cyber</fullName>
            </value>
            <value>
                <fullName>FI - D&amp;O</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>FI - Crime</fullName>
            </value>
            <value>
                <fullName>FI - Blend</fullName>
            </value>
            <value>
                <fullName>Commercial Crime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>