force-app/main/default/objects/Policy_Schedule__c/fields/Rate_On_Line__c.field-meta.xml
<CustomField>
    <fullName>Rate_On_Line__c</fullName>
    <label>Rate On Line (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>