force-app/main/default/objects/Policy_Schedule__c/fields/Rate_Per_Mil__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Mil__c</fullName>
    <label>Rate Per Mil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>