force-app/main/default/objects/Policy_Schedule__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Signed Share (%)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>