force-app/main/default/objects/Policy_Schedule__c/fields/Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Split_Type__c</fullName>
    <label>Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>EEA</fullName>
            </value>
            <value>
                <fullName>Non EEA</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>