force-app/main/default/objects/Policy_Schedule__c/fields/Technical_GWP__c.field-meta.xml
<CustomField>
    <fullName>Technical_GWP__c</fullName>
    <formula>IF( NOT(VG_Is_MTA__c), 
(VG_Risk_Premium__c + Endorsement_GWP__c )*((( Base_Creation_End_Date__c - Base_Creation_Start_Date__c )+1)/365), 
CASE( 
VG_MTA_Type__c , 
&quot;Extension&quot;, ((((VG_MTA_End_Date__c - VG_MTA_Start_Date__c)+1)/365)* (VG_Risk_Premium__c + Endorsement_GWP__c ) ), 
&quot;Cancellation&quot;, -1*(((( VG_Pre_MTA_Expiry_Date__c - VG_MTA_Cancellation_Date__c)+1)/365)* (VG_Risk_Premium__c + Endorsement_GWP__c )), 
&quot;Revision of Cover&quot;, (VG_Risk_Premium__c + Endorsement_GWP__c )*((( Base_Creation_End_Date__c - Base_Creation_Start_Date__c )+1)/365), 
&quot;Declaration&quot;, (VG_Risk_Premium__c + Endorsement_GWP__c )*((( Base_Creation_End_Date__c - Base_Creation_Start_Date__c )+1)/365)* VG_Declaration_Type_percent__c , 
VG_Risk_Premium__c 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>