force-app/main/default/objects/Policy_Schedule__c/fields/Technical_Layer_Premium__c.field-meta.xml
<CustomField>
    <fullName>Technical_Layer_Premium__c</fullName>
    <label>Technical Layer Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>