force-app/main/default/objects/Policy_Schedule__c/fields/Transaction_GWP__c.field-meta.xml
<CustomField>
    <fullName>Transaction_GWP__c</fullName>
    <label>Transaction Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>