force-app/main/default/objects/Policy_Schedule__c/fields/Underwriting_Premium__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Premium__c</fullName>
    <label>Underwriting Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>