force-app/main/default/objects/Policy_Schedule__c/fields/VG_Adjusted_PD_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Adjusted_PD_Base_Rate__c</fullName>
    <label>Adjusted PD Base Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>