force-app/main/default/objects/Policy_Schedule__c/fields/VG_Adjustment_Factor__c.field-meta.xml
<CustomField>
    <fullName>VG_Adjustment_Factor__c</fullName>
    <label>Adjustment Factor</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>