force-app/main/default/objects/Policy_Schedule__c/fields/VG_Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>VG_Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Risk</fullName>
            </value>
            <value>
                <fullName>Bad Risk</fullName>
            </value>
            <value>
                <fullName>Broker Relationship</fullName>
            </value>
            <value>
                <fullName>Customer Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>