force-app/main/default/objects/Policy_Schedule__c/fields/VG_Auto_acquisition_Threshold__c.field-meta.xml
<CustomField>
    <fullName>VG_Auto_acquisition_Threshold__c</fullName>
    <label>Auto-acquisition Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>