force-app/main/default/objects/Policy_Schedule__c/fields/VG_Base_Policy__c.field-meta.xml
<CustomField>
    <fullName>VG_Base_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base Policy</label>
    <type>Checkbox</type>
</CustomField>