force-app/main/default/objects/Policy_Schedule__c/fields/VG_Bridge_Selected_Asset__c.field-meta.xml
<CustomField>
    <fullName>VG_Bridge_Selected_Asset__c</fullName>
    <label>Bridge Selected Asset</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>