force-app/main/default/objects/Policy_Schedule__c/fields/VG_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_Brokerage_Amount__c</fullName>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>