force-app/main/default/objects/Policy_Schedule__c/fields/VG_Brokerage_Percent__c.field-meta.xml
<CustomField>
    <fullName>VG_Brokerage_Percent__c</fullName>
    <label>Brokerage (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>