force-app/main/default/objects/Policy_Schedule__c/fields/VG_Capacity_Paper__c.field-meta.xml
<CustomField>
    <fullName>VG_Capacity_Paper__c</fullName>
    <label>Section No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PI Liberty 100%</fullName>
            </value>
            <value>
                <fullName>PI Liberty Co</fullName>
            </value>
            <value>
                <fullName>PI Liberty Lloyds</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual VFP</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - D&amp;O/Crime</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Haulage</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Non Conventional</fullName>
            </value>
            <value>
                <fullName>Bridge Default</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI Open Market (2020)</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI CE (2020)</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI CE (2019)</fullName>
            </value>
            <value>
                <fullName>Written in 2020</fullName>
            </value>
            <value>
                <fullName>PT into 2020</fullName>
            </value>
            <value>
                <fullName>2018 Liberty Company Stamp - 2018 year</fullName>
            </value>
            <value>
                <fullName>2019 - 2019 YOA - 10 MUSD - 60% Liberty, 10% Swiss, 30% Everest</fullName>
            </value>
            <value>
                <fullName>2019 - 2020 YOA - 10 MUSD - 60% Liberty, 10% Swiss, 30% Everest</fullName>
            </value>
            <value>
                <fullName>2019 - 2020 YOA - after Partner PT</fullName>
            </value>
            <value>
                <fullName>2020 - 4 MUSD (Liberty 3 + Swiss 1)</fullName>
            </value>
            <value>
                <fullName>2020 - 5.5 MUSD (Liberty 3+Swiss 1, Fidelis 0+Partner 1.5)</fullName>
            </value>
            <value>
                <fullName>Special - Inmarsat PT Stamp</fullName>
            </value>
            <value>
                <fullName>Special - Measat PT Stamp</fullName>
            </value>
            <value>
                <fullName>Special - Ovzon PT Stamp</fullName>
            </value>
            <value>
                <fullName>Special - Resurs PT Stamp</fullName>
            </value>
            <value>
                <fullName>2019 - 2020 YOA - 10 MUSD - 90% Liberty, 10% Swiss</fullName>
            </value>
            <value>
                <fullName>2020 - 13.5 MUSD (3+1, 1.5, 2.5+2.5+0.5+2.5)</fullName>
            </value>
            <value>
                <fullName>2020 - Liberty and Lineslip (Argentina)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>