force-app/main/default/objects/Policy_Schedule__c/fields/VG_Co_Insurance_Parent__c.field-meta.xml
<CustomField>
    <fullName>VG_Co_Insurance_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Insurance Parent</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Policy Schedules (Co-Insurance Parent)</relationshipLabel>
    <relationshipName>CoInsuranceParent</relationshipName>
    <type>Lookup</type>
</CustomField>