force-app/main/default/objects/Policy_Schedule__c/fields/VG_Co_Insurance_type__c.field-meta.xml
<CustomField>
    <fullName>VG_Co_Insurance_type__c</fullName>
    <label>Co Insurance type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>