force-app/main/default/objects/Policy_Schedule__c/fields/VG_Coverages__c.field-meta.xml
<CustomField>
    <fullName>VG_Coverages__c</fullName>
    <label>Coverages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Named Perils</fullName>
            </value>
            <value>
                <fullName>M3 - Fully Comprehensive</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Fire &amp; Theft</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Only</fullName>
            </value>
            <value>
                <fullName>M6 - Fire &amp; Theft Only</fullName>
            </value>
            <value>
                <fullName>Business Interruption</fullName>
            </value>
            <value>
                <fullName>All Perils</fullName>
            </value>
            <value>
                <fullName>Terrorism</fullName>
            </value>
            <value>
                <fullName>Fire and Allied Perils</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>EAR</fullName>
            </value>
            <value>
                <fullName>Motor Hull</fullName>
            </value>
            <value>
                <fullName>Loss of Profit</fullName>
            </value>
            <value>
                <fullName>CatNat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>