force-app/main/default/objects/Policy_Schedule__c/fields/VG_CREDIT_Augur_SCORE__c.field-meta.xml
<CustomField>
    <fullName>VG_CREDIT_Augur_SCORE__c</fullName>
    <label>CREDIT (Augur) SCORE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>