force-app/main/default/objects/Policy_Schedule__c/fields/VG_Current_Plan_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Current_Plan_Rate__c</fullName>
    <label>Current Plan Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VG_Currency</valueSetName>
    </valueSet>
</CustomField>