force-app/main/default/objects/Policy_Schedule__c/fields/VG_D_O_Product__c.field-meta.xml
<CustomField>
    <fullName>VG_D_O_Product__c</fullName>
    <label>D&amp;O Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Side A</fullName>
            </value>
            <value>
                <fullName>A Side DIC</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>POSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>