force-app/main/default/objects/Policy_Schedule__c/fields/VG_Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Declaration_Type__c</fullName>
    <label>Declaration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Quarter</fullName>
            </value>
            <value>
                <fullName>2nd Quarter</fullName>
            </value>
            <value>
                <fullName>3rd Quarter</fullName>
            </value>
            <value>
                <fullName>4th Quarter</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>