force-app/main/default/objects/Policy_Schedule__c/fields/VG_Declaration_Type_percent__c.field-meta.xml
<CustomField>
    <fullName>VG_Declaration_Type_percent__c</fullName>
    <label>Declaration Type (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>