force-app/main/default/objects/Policy_Schedule__c/fields/VG_Endorsement_Premium_Calc__c.field-meta.xml
<CustomField>
    <fullName>VG_Endorsement_Premium_Calc__c</fullName>
    <formula>IF( NOT(VG_Is_MTA__c),  
                  ( Endorsement_GWP__c  )*((( Base_Creation_End_Date__c -  Base_Creation_Start_Date__c )+1)/365),  
                  CASE( 
                       VG_MTA_Type__c , 
                       &quot;Extension&quot;, ((((VG_MTA_End_Date__c -  VG_MTA_Start_Date__c)+1)/365)* ( Endorsement_GWP__c  ) ), 
                        &quot;Cancellation&quot;, -1*(((( VG_Pre_MTA_Expiry_Date__c - VG_MTA_Cancellation_Date__c)+1)/365)* ( Endorsement_GWP__c )),
                       &quot;Revision of Cover&quot;, ( Endorsement_GWP__c )*((( Base_Creation_End_Date__c -  Base_Creation_Start_Date__c )+1)/365), 
                       &quot;Declaration&quot;, ( Endorsement_GWP__c  )*((( Base_Creation_End_Date__c -  Base_Creation_Start_Date__c )+1)/365)* VG_Declaration_Type_percent__c ,
                        Endorsement_GWP__c 
                   )
)</formula>
    <label>Endorsement Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>