force-app/main/default/objects/Policy_Schedule__c/fields/VG_Entity_Share__c.field-meta.xml
<CustomField>
    <fullName>VG_Entity_Share__c</fullName>
    <label>VG Entity Share (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>