force-app/main/default/objects/Policy_Schedule__c/fields/VG_Entity_Split_Required__c.field-meta.xml
<CustomField>
    <fullName>VG_Entity_Split_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VG Entity Split Required</label>
    <type>Checkbox</type>
</CustomField>