force-app/main/default/objects/Policy_Schedule__c/fields/VG_Extended_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>VG_Extended_Reporting_Period__c</fullName>
    <label>Extended Reporting Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>