force-app/main/default/objects/Policy_Schedule__c/fields/VG_Extended_Reporting_Period_AP__c.field-meta.xml
<CustomField>
    <fullName>VG_Extended_Reporting_Period_AP__c</fullName>
    <label>Extended Reporting Period (% AP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>