force-app/main/default/objects/Policy_Schedule__c/fields/VG_Fee_Income__c.field-meta.xml
<CustomField>
    <fullName>VG_Fee_Income__c</fullName>
    <label>Fee Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>