force-app/main/default/objects/Policy_Schedule__c/fields/VG_Financials_Created__c.field-meta.xml
<CustomField>
    <fullName>VG_Financials_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financials Created</label>
    <type>Checkbox</type>
</CustomField>