force-app/main/default/objects/Policy_Schedule__c/fields/VG_Gross_Written_Premium_100__c.field-meta.xml
<CustomField>
    <fullName>VG_Gross_Written_Premium_100__c</fullName>
    <label>Gross Written Premium(100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>