force-app/main/default/objects/Policy_Schedule__c/fields/VG_Is_Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>VG_Is_Co_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Co-Insurance</label>
    <type>Checkbox</type>
</CustomField>