force-app/main/default/objects/Policy_Schedule__c/fields/VG_Is_MTA__c.field-meta.xml
<CustomField>
    <fullName>VG_Is_MTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MTA?</label>
    <type>Checkbox</type>
</CustomField>